--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="project.css">
 
     <!-- Importing favicon -->
-    <link rel="shortcut icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" href="favicon.png"/>
 
     <title>Home | Sonia Persaud</title>
 
@@ -47,7 +47,7 @@
     <!-- Introduction -->
     <div class="hello" id='hi'>
         <h1>Hi there, I'm Sonia! Nice to meet you.</h1>
-        <img border="0" src="images/snowglobe.png" width="125" height="100">
+        <img border="0" src="snowglobe.png" width="125" height="100">
     </div>
 
     <!-- About Me-->
@@ -67,7 +67,7 @@
     <div>
         <h2 class='title' id='edu'>education</h2>
         <div class='education'>
-            <img style='padding-left: 100px;' border="0" src="images/cafe.png" width="200" height="200">
+            <img style='padding-left: 100px;' border="0" src="cafe.png" width="200" height="200">
             <p id='uts'>
                 <strong>University of Toronto Schools</strong> <br>
                 <i class='date'>2016 - 2020</i> <br><br>
@@ -111,16 +111,16 @@
         <h2 class ='title' id='projects'>what i'm working on</h2>
         <div class='interests'>
             <a href="jack.html">
-                <img class = 'projectcats' border="0" src="images/sit.png" width="200" height="200">
+                <img class = 'projectcats' border="0" src="sit.png" width="200" height="200">
             </a>
             <a href='tri.html'>
-                <img class = 'projectcats' border="0" src="images/chipsleep.png" width="200" height="200">
+                <img class = 'projectcats' border="0" src="chipsleep.png" width="200" height="200">
             </a>
             <a href="blog.html">
-                <img class = 'projectcats' border="0" src="images/speckles.png" width="200" height="200">
+                <img class = 'projectcats' border="0" src="speckles.png" width="200" height="200">
             </a>
             <a href='lit.html'>
-                <img class = 'projectcats' border='0' src='images/spooky.png' width='200' height='200'>
+                <img class = 'projectcats' border='0' src='spooky.png' width='200' height='200'>
             </a>
         </div>
     </div>
