--- a/jack.html
+++ b/jack.html
@@ -52,7 +52,7 @@
     <div>
         <h2 class='title' id='plan'>the plan</h2>
         <div class='timeline'>
-            <img style='padding-left: 100px;' border="0" src="images/mackdino.png" width="200" height="200">
+            <img style='padding-left: 100px;' border="0" src="mackdino.png" width="200" height="200">
             <p id='research'>
                 <strong>Research</strong> <br>
                 <i class='date'>January - March 2021</i> <br><br>
