--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!--Awards & Honours -->
     <div>
-        <h2 class='title' id='awards'>grants and awards</h2>
+        <h2 class='title' id='awards'>selected grants and awards</h2>
         <p>
             <strong>Branch Out Neurological Foundation Summer Undergraduate Studentship</strong><br><i class='date'>February 2021</i><br>
             Recipient of a competitive undergraduate research grant to conduct summer research in the lab of Dr. Robin Green.
