--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="title" id="about">about me</h2>
         <p class='description'>
             I'm a second-year student at the University of Western Ontario, pursuing a Honours Specialization in Neuroscience. I'm passionate about neuroscience research, mental health advocacy, and creative writing. <br><br>
-            Currently, I'm a summer research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
+            I'm also a research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
             I've always been fascinated by web design, and this summer I finally decided to jump in and learn more. This website was built using HTML and CSS with hopefully some JavaScript forthcoming :) Thank you for being here and I hope you have a good time!
         </p>
         <p class='description'>
@@ -124,6 +124,8 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='http://thecurrentssc.com/index.php/2021/11/19/ultra-fast-fashion-shein-tiktok-and-the-e-commerce-epidemic/'>Ultra-Fast Fashion: SHEIN, TikTok, and the E-Commerce Epidemic</a>: <i>The Current</i>, November 19, 2021
+            <br><br>
             <a href='http://thecurrentssc.com/index.php/2021/05/03/hallway-healthcare-overcrowding-in-ontarios-hospitals/'>Hallway Healthcare: Overcrowding in Ontario's Hospitals</a>: <i>The Current</i>, May 3, 2021
             <br><br>
             Also, check out my <a href=https://grosmornenationalpark.wordpress.com>blog</a>!
