--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="project.css">
 
     <!-- Importing favicon -->
-    <link rel="shortcut icon" href="favicon.png"/>
+    <link rel="shortcut icon" href="images/favicon.png"/>
 
     <title>Home | Sonia Persaud</title>
 
@@ -47,7 +47,7 @@
     <!-- Introduction -->
     <div class="hello" id='hi'>
         <h1>Hi there, I'm Sonia! Nice to meet you.</h1>
-        <img border="0" src="snowglobe.png" width="125" height="100">
+        <img border="0" src="images/snowglobe.png" width="125" height="100">
     </div>
 
     <!-- About Me-->
@@ -55,8 +55,8 @@
         <h2 class="title" id="about">about me</h2>
         <p class='description'>
             I'm a second-year student at the University of Western Ontario, pursuing a Honours Specialization in Neuroscience. I'm passionate about neuroscience research, mental health advocacy, and creative writing. <br><br>
-            I'm also a research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
-            I've always been fascinated by web design, and this summer I finally decided to jump in and learn more. This website was built using HTML and CSS with hopefully some JavaScript forthcoming :) Thank you for being here and I hope you have a good time!
+            Currently, I'm a summer research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
+            I've always been fascinated by web design, and in the summer of 2021, I finally decided to jump in and learn more. This website was built using HTML and CSS with hopefully some JavaScript forthcoming. Thank you for being here and I hope you have a good time!
         </p>
         <p class='description'>
             Feel free to contact me at <a class='email' href="mailto:spersa46@uwo.ca">spersa46@uwo.ca</a>.
@@ -67,17 +67,17 @@
     <div>
         <h2 class='title' id='edu'>education</h2>
         <div class='education'>
-            <img style='padding-left: 100px;' border="0" src="cafe.png" width="200" height="200">
-            <p id='uts'>
-                <strong>University of Toronto Schools</strong> <br>
-                <i class='date'>2016 - 2020</i> <br><br>
-                Ontario Secondary Schools Diploma
-            </p>
+            <img style='padding-left: 100px;' border="0" src="images/cafe.png" width="200" height="200">
             <p id='uwo'>
                 <strong>University of Western Ontario</strong> <br>
                 <i class='date'>Expected graduation 2024</i><br><br>
                 Bachelor of Science (BSc) candidate<br>
                 Honours Specialization in Neuroscience
+            </p>
+            <p id='uts'>
+                <strong>University of Toronto Schools</strong> <br>
+                <i class='date'>2016 - 2020</i> <br><br>
+                Ontario Secondary Schools Diploma
             </p>
         </div>
     </div>
@@ -95,28 +95,9 @@
             <strong>The Allan Robertson Scholarship</strong><br><i class='date'>June 2020</i><br>
             Awarded for qualities of scholarship, leadership, and unselfish participation in extracurricular activities.
             <br><br>
-            <strong id='projects'>Western Scholarship of Distinction</strong><br><i class='date'>May 2020</i><br>
+            <strong id='projects'>Western Scholarship of Distinction</strong><br><i class='date'>June 2020</i><br>
             Awarded for achieving a final high school average of 98%.
         </p>
-    </div>
-
-    <!-- Projects -->
-    <div>
-        <h2 class ='title' id='projects'>what i'm working on</h2>
-        <div class='interests'>
-            <a href="jack.html">
-                <img class = 'projectcats' border="0" src="sit.png" width="200" height="200">
-            </a>
-            <a href='tri.html'>
-                <img class = 'projectcats' border="0" src="chipsleep.png" width="200" height="200">
-            </a>
-            <a href="blog.html">
-                <img class = 'projectcats' border="0" src="speckles.png" width="200" height="200">
-            </a>
-            <a href='lit.html'>
-                <img class = 'projectcats' border='0' src='spooky.png' width='200' height='200'>
-            </a>
-        </div>
     </div>
 
 
@@ -124,17 +105,25 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/news/nationwide-walkout-sees-students-protest-gender-based-violence-on-campus/article_eae45706-56d4-11ec-9d34-6fa39a1939de.html'>Nationwide walkout sees students protest gender-based violence on campus</a>: <i>The Gazette</i>, December 6, 2021
+            <br><br>
+            <a href='https://westerngazette.ca/news/western-signs-charter-committing-to-black-inclusion/article_9836bfb0-546f-11ec-8a00-c71c28596769.html'>Western signs charter committing to Black inclusion</a>: <i>The Gazette</i>, December 3, 2021
+            <br><br>
             <a href='http://thecurrentssc.com/index.php/2021/11/19/ultra-fast-fashion-shein-tiktok-and-the-e-commerce-epidemic/'>Ultra-Fast Fashion: SHEIN, TikTok, and the E-Commerce Epidemic</a>: <i>The Current</i>, November 19, 2021
+            <br><br>
+            <a href='https://westerngazette.ca/news/new-safe-campus-coalition-announces-plans-for-future-walkout/article_c9c41e2a-496a-11ec-81e8-3f7ec4464495.html'>New Safe Campus Coalition announces plans for future walkout</a>: <i>The Gazette</i>, November 19, 2021
+            <br><br>
+            <a href='https://westerngazette.ca/news/western-retrofits-three-more-campus-buildings-with-bird-friendly-windows/article_9f45ee48-40ab-11ec-9a2b-27a1edd4b580.html'>Western retrofits three more campus buildings with bird-friendly windows</a>: <i>The Gazette</i>, November 8, 2021
             <br><br>
             <a href='http://thecurrentssc.com/index.php/2021/05/03/hallway-healthcare-overcrowding-in-ontarios-hospitals/'>Hallway Healthcare: Overcrowding in Ontario's Hospitals</a>: <i>The Current</i>, May 3, 2021
             <br><br>
-            Also, check out my <a href=https://grosmornenationalpark.wordpress.com>blog</a>!
+            Also, check out my <a href=https://medialtemporal.substack.com>Substack</a>!
         </div>
     </div>
 
     <!-- Footer -->
     <div class='footer'>
-        © 2021 sonia persaud
+        © 2022 sonia persaud
     </div>
 
 </body>
