--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class='nav-link' href=#hi>about</a>
                 </li>
                 <li>
-                    <a class='nav-link' href="#projects">projects</a>
+                    <a class='nav-link' href="https://medialtemporal.substack.com">substack</a>
                 </li>
                 <li>
                     <a class='nav-link' href=https://linkedin.com/in/soniarpersaud>linkedin</a>
