--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="project.css">
 
     <!-- Importing favicon -->
-    <link rel="shortcut icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" href="favicon.png"/>
 
     <title>Home | Sonia Persaud</title>
 
@@ -47,7 +47,7 @@
     <!-- Introduction -->
     <div class="hello" id='hi'>
         <h1>Hi there, I'm Sonia! Nice to meet you.</h1>
-        <img border="0" src="images/snowglobe.png" width="125" height="100">
+        <img border="0" src="snowglobe.png" width="125" height="100">
     </div>
 
     <!-- About Me-->
@@ -67,7 +67,7 @@
     <div>
         <h2 class='title' id='edu'>education</h2>
         <div class='education'>
-            <img style='padding-left: 100px;' border="0" src="images/cafe.png" width="200" height="200">
+            <img style='padding-left: 100px;' border="0" src="cafe.png" width="200" height="200">
             <p id='uwo'>
                 <strong>University of Western Ontario</strong> <br>
                 <i class='date'>Expected graduation 2024</i><br><br>
