--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="title" id="about">about me</h2>
         <p class='description'>
             I'm a second-year student at the University of Western Ontario, pursuing a Honours Specialization in Neuroscience. I'm passionate about neuroscience research, mental health advocacy, and creative writing. <br><br>
-            Currently, I'm a summer research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
+            Currently, I'm a research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
             I've always been fascinated by web design, and in the summer of 2021, I finally decided to jump in and learn more. This website was built using HTML and CSS with hopefully some JavaScript forthcoming. Thank you for being here and I hope you have a good time!
         </p>
         <p class='description'>
@@ -105,6 +105,10 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/news/western-says-masks-will-stay-until-at-least-the-end-of-term/article_dd59b300-a0c2-11ec-9b30-677d5315203f.html'>Western says masks will stay 'until at least the end of term'</a>: <i>The Gazette</i>, March 10, 2022
+            <br><br>
+            <a href='https://westerngazette.ca/news/health-unit-says-covid-19-transmission-in-the-hands-of-the-students/article_47ad935c-8098-11ec-afdf-f3307fd10f69.html'>Health unit says COVID-19 transmission 'in the hands of the students'</a>: <i>The Gazette</i>, January 28, 2022
+            <br><br>
             <a href='https://westerngazette.ca/news/nationwide-walkout-sees-students-protest-gender-based-violence-on-campus/article_eae45706-56d4-11ec-9d34-6fa39a1939de.html'>Nationwide walkout sees students protest gender-based violence on campus</a>: <i>The Gazette</i>, December 6, 2021
             <br><br>
             <a href='https://westerngazette.ca/news/western-signs-charter-committing-to-black-inclusion/article_9836bfb0-546f-11ec-8a00-c71c28596769.html'>Western signs charter committing to Black inclusion</a>: <i>The Gazette</i>, December 3, 2021
