--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/news/voter-turnout-drops-by-5-per-cent-in-usc-elections/article_9f7cfec2-a3ea-11ec-800d-0351a10fbfa7.html'>Voter turnout drops by 5 per cent in USC elections</a>: <i>The Gazette</i>, March 14, 2022
+            <br><br>
             <a href='https://westerngazette.ca/news/western-says-masks-will-stay-until-at-least-the-end-of-term/article_dd59b300-a0c2-11ec-9b30-677d5315203f.html'>Western says masks will stay 'until at least the end of term'</a>: <i>The Gazette</i>, March 10, 2022
             <br><br>
             <a href='https://westerngazette.ca/news/health-unit-says-covid-19-transmission-in-the-hands-of-the-students/article_47ad935c-8098-11ec-afdf-f3307fd10f69.html'>Health unit says COVID-19 transmission 'in the hands of the students'</a>: <i>The Gazette</i>, January 28, 2022
