--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/news/western-to-continue-masking-vaxx-requirements-through-spring-term/article_be8f06bc-c1b2-11ec-aa36-8357c51a72db.html'>Western to continue masking, vaxx requirements through spring term</a>: <i>The Gazette</i>, April 21, 2022
+            <br><br>
             <a href='https://westerngazette.ca/news/western-to-review-its-covid-19-vaccination-policy-before-next-fall/article_24b0de04-a60e-11ec-b93d-934bff2e8043.html'>Western to review its COVID-19 vaccination policy before next fall</a>: <i>The Gazette</i>, March 17, 2022
             <br><br>
             <a href='https://westerngazette.ca/news/voter-turnout-drops-by-5-per-cent-in-usc-elections/article_9f7cfec2-a3ea-11ec-800d-0351a10fbfa7.html'>Voter turnout drops by 5 per cent in USC elections</a>: <i>The Gazette</i>, March 14, 2022
