--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/news/western-drops-mask-mandate/article_0fa649c2-f7c6-11ec-b947-7fa04d4f65c5.html'>Western drops mask mandate</a>: <i>The Gazette</i>, June 29, 2022
+            <br><br>
             <a href='https://westerngazette.ca/news/western-to-continue-masking-vaxx-requirements-through-spring-term/article_be8f06bc-c1b2-11ec-aa36-8357c51a72db.html'>Western to continue masking, vaxx requirements through spring term</a>: <i>The Gazette</i>, April 21, 2022
             <br><br>
             <a href='https://westerngazette.ca/news/western-to-review-its-covid-19-vaccination-policy-before-next-fall/article_24b0de04-a60e-11ec-b93d-934bff2e8043.html'>Western to review its COVID-19 vaccination policy before next fall</a>: <i>The Gazette</i>, March 17, 2022
@@ -126,8 +128,6 @@
             <a href='https://westerngazette.ca/news/western-retrofits-three-more-campus-buildings-with-bird-friendly-windows/article_9f45ee48-40ab-11ec-9a2b-27a1edd4b580.html'>Western retrofits three more campus buildings with bird-friendly windows</a>: <i>The Gazette</i>, November 8, 2021
             <br><br>
             <a href='http://thecurrentssc.com/index.php/2021/05/03/hallway-healthcare-overcrowding-in-ontarios-hospitals/'>Hallway Healthcare: Overcrowding in Ontario's Hospitals</a>: <i>The Current</i>, May 3, 2021
-            <br><br>
-            Also, check out my <a href=https://medialtemporal.substack.com>Substack</a>!
         </div>
     </div>
 
