--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
     <div>
         <h2 class="title" id="about">about me</h2>
         <p class='description'>
-            I'm a second-year student at the University of Western Ontario, pursuing a Honours Specialization in Neuroscience. I'm passionate about neuroscience research, mental health advocacy, and creative writing. <br><br>
-            Currently, I'm a research student at the Toronto Rehabilitation Institute, where I'm evaluating the impact of a spatial navigation intervention on patients with traumatic brain injury and multiple sclerosis. <br><br>
-            I've always been fascinated by web design, and in the summer of 2021, I finally decided to jump in and learn more. This website was built using HTML and CSS with hopefully some JavaScript forthcoming. Thank you for being here and I hope you have a good time!
+            I'm a third-year student at the University of Western Ontario, pursuing a Honours Specialization in Neuroscience and serving as a News Editor for the Western Gazette. I'm passionate about neuroscience research, mental health advocacy, and creative writing. <br><br>
+            This summer, I'm working an intern at the youth mental health nonprofit Jack.org, where I'm a member of the Evaluation team. 
         </p>
         <p class='description'>
             Feel free to contact me at <a class='email' href="mailto:spersa46@uwo.ca">spersa46@uwo.ca</a>.
