--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class='nav-link' href=#hi>about</a>
                 </li>
                 <li>
-                    <a class='nav-link' href="https://medialtemporal.substack.com">substack</a>
+                    <a class='nav-link' href="https://medialtemporal.github.io/MeepBot">meep bot</a>
                 </li>
                 <li>
                     <a class='nav-link' href=https://linkedin.com/in/soniarpersaud>linkedin</a>
@@ -58,7 +58,7 @@
             This summer, I'm working an intern at the youth mental health nonprofit Jack.org, where I'm a member of the Evaluation team. 
         </p>
         <p class='description'>
-            Feel free to contact me at <a class='email' href="mailto:spersa46@uwo.ca">spersa46@uwo.ca</a>.
+            Feel free to contact me at <a class='email' href="mailto:sonia.persaud@westerngazette.ca">sonia.persaud@westerngazette.ca</a>.
         </p>
     </div>
 
@@ -104,6 +104,13 @@
     <div>
         <h2 class ='title' id='words'>words</h2>
         <div class='words'>
+            <a href='https://westerngazette.ca/features/special_editions/equity-census-signals-western-may-not-be-so-white-but-must-work-for-indigenous-equity/article_fcda3eb4-3061-11ed-b203-3b86a0b72669.html'>Census signals Western may not be so white, but must work for Indigenous equity/a>: <i>The Gazette</i>, September 9, 2022 
+            <a href='https://westerngazette.ca/news/western-extends-booster-deadline-to-january-following-student-push-back/article_9c6d1f80-2e2a-11ed-b8df-a39dade47e76.html'>Western extends booster deadline to January following student push back/a>: <i>The Gazette</i>, September 6, 2022
+            <br><br>
+            <a href='https://westerngazette.ca/features/special_editions/oweek-2022-kicks-off-with-calmer-opening-ceremonies/article_1dbc4446-2e1a-11ed-9fba-678a9b0caa82.html'>OWeek 2022 kicks off with calmer opening ceremonies/a>: <i>The Gazette</i>, September 6, 2022
+            <br><br>
+            <a href='https://westerngazette.ca/news/alcohol-could-be-coming-to-7-eleven-near-campus/article_4ca1fc38-1e61-11ed-bc10-f7462f0544dd.html'>Alcohol could be coming to 7-Eleven near campus/a>: <i>The Gazette</i>, August 17, 2022
+            <br><br>
             <a href='https://westerngazette.ca/news/western-drops-mask-mandate/article_0fa649c2-f7c6-11ec-b947-7fa04d4f65c5.html'>Western drops mask mandate</a>: <i>The Gazette</i>, June 29, 2022
             <br><br>
             <a href='https://westerngazette.ca/news/western-to-continue-masking-vaxx-requirements-through-spring-term/article_be8f06bc-c1b2-11ec-aa36-8357c51a72db.html'>Western to continue masking, vaxx requirements through spring term</a>: <i>The Gazette</i>, April 21, 2022
