--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="navbar-name" href="#top"><h2>Sonia Persaud</h2></a>
             <ul class="links">
                 <li>
-                    <a class='nav-link' href='about.html' id="about-on-about">About</a>
+                    <a class='nav-link' href='medialtemporal.github.io' id="about-on-about">About</a>
                 </li>
                 <li>
                     <a class='nav-link' href="projects.html">Projects</a>
