--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,800;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
 
 </head>
    
@@ -32,7 +33,7 @@
             <a class="navbar-name" href="#top"><h2>Sonia Persaud</h2></a>
             <ul class="links">
                 <li>
-                    <a class='nav-link' href='medialtemporal.github.io' id="about-on-about">About</a>
+                    <a class='nav-link' href='about.html' id="about-on-about">About</a>
                 </li>
                 <li>
                     <a class='nav-link' href="projects.html">Projects</a>
@@ -51,14 +52,19 @@
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
-            I'm a third-year student at the University of Western Ontario, completing an <strong>Honours Specialization in Neuroscience</strong> and working as a News Editor for the Western Gazette. <br><br> I'm passionate about research, mental health advocacy, and computer science. My goal is to pursue graduate studies in the area of computational psychiatry or neuroscience and combine these interests.
-        </p>
-        <p class='description'>
+            I'm a third-year student at the University of Western Ontario, completing an <strong>Honours Specialization in Neuroscience</strong> and working as a News Editor for the Western Gazette. 
+            <br><br> 
+            I'm interested in research, mental health advocacy, and computer science. My goal is to pursue graduate studies in the area of computational psychiatry or neuroscience and combine these interests.
+            <br><br>
             Previously, I've worked at the youth mental health non-profit <strong>Jack.org</strong> as a summer intern, where I wrote literature reviews and led focus groups; and the <strong>Toronto Rehabilitation Institute</strong>, where I conducted an items analysis using R of data from a study on traumatic brain injury.
+            <br><br>
         </p>
-        <p class='description'>
-            Contact me at <a class='email' href="mailto:spersa46@uwo.ca">spersa46@uwo.ca</a>. 
-        </p>
+        <div class='contact'>
+            <a href="https://github.com/medialtemporal/"><img src="images/github-hover.png" onmouseover="this.src='images/github.png'" onmouseout="this.src='images/github-hover.png'" height='25em' width='25em' /></a>
+            <a href="https://twitter.com/soniarpersaud"><img src="images/twitter-hover.png" onmouseover="this.src='images/twitter.png'" onmouseout="this.src='images/twitter-hover.png'" height='25em' width='25em' /></a>
+            <a class='email' href="mailto:spersa46@uwo.ca" style="text-decoration: none;">spersa46@uwo.ca</a>
+
+        </div>
     </div>
 
     <!-- Skills -->
