--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
-            I'm a third-year student at the University of Western Ontario, completing an <strong>Honours Specialization in Neuroscience</strong> and working as a News Editor for the Western Gazette. 
+            I'm a third-year student at the University of Western Ontario, completing an <strong>Honours Specialization in Neuroscience</strong> and working as a News Editor for the student newspaper, the Western Gazette. 
             <br><br> 
             I'm interested in research, mental health advocacy, and computer science. My goal is to pursue graduate studies in the area of computational psychiatry or neuroscience and combine these interests.
             <br><br>
@@ -71,7 +71,7 @@
     <div>
         <h2 class='title' id='skills'>Skills</h2>
         <p>
-            <strong>Python</strong> and data science libraries (pandas, numpy, scipy, matplotlib, seaborn).<br><br>
+            <strong>Python</strong> and data science libraries (pandas, numpy, scipy).<br><br>
             <strong>R</strong> and tidyverse packages (dplyr, tidyr, ggplot2).<br><br>
             <strong>HTML</strong> and <strong>CSS</strong>.
         </p>
@@ -82,7 +82,7 @@
         <h2 class='title' id='awards'>Selected grants and awards</h2>
         <p>
             <strong>Branch Out Neurological Foundation Summer Undergraduate Studentship</strong><br><i class='date'>February 2021</i><br>
-            Recipient of a competitive undergraduate research grant to conduct summer research in the lab of Dr. Robin Green.
+            Recipient of a competitive undergraduate research grant to conduct summer research in the lab of Dr. Robin Green at the Toronto Rehabilitation Institute.
             <br><br>
             <strong>UHN Medical Staff Association Volunteer Educational Award</strong><br><i class='date'>June 2020</i><br>
             Awarded for demonstrating an exceptional commitment to volunteering at the University Health Network, along with high academic performance and extracurricular contributions.
