--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <div>
         <h2 class='title' id='awards'>Selected grants and awards</h2>
         <p>
+            <strong>John H. McDonald Award for Data Journalism</strong><br><i class='date'>February 2023</i><br>
+            Awarded by the Canadian University Press for excellence in student data journalism.
+            <br><br>
             <strong>Branch Out Neurological Foundation Summer Undergraduate Studentship</strong><br><i class='date'>February 2021</i><br>
             Recipient of a competitive undergraduate research grant to conduct summer research in the lab of Dr. Robin Green at the Toronto Rehabilitation Institute.
             <br><br>
