--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <!-- Importing fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,800;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 </head>
    
@@ -44,24 +47,26 @@
   
     <!-- Introduction -->
     <div class="hello" id='hi'>
-        <h1>Hi there, I'm Sonia! Nice to meet you.</h1>
-        <img border="0" src="images/cafe.png" width="125" height="125">
+        <h1>Hi there, I'm Sonia! It's nice to meet you.</h1>
+        <img border="0" src="images/sonia2.png" width="130" height="130" id="pfp">
     </div>
 
     <!-- About Me-->
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
-            I'm a third-year student at the University of Western Ontario, completing an <strong>Honours Specialization in Neuroscience</strong> and working as a News Editor for the student newspaper, the Western Gazette. 
-            <br><br> 
-            I'm interested in research, mental health advocacy, and computer science. My goal is to pursue graduate studies in the area of computational psychiatry or neuroscience and combine these interests.
+            I'm a recent graduate of Western University, where I completed a Bachelor of Science with an Honours Specialization in Neuroscience.
             <br><br>
-            Previously, I've worked at the youth mental health non-profit <strong>Jack.org</strong> as a summer intern, where I wrote literature reviews and led focus groups; and the <strong>Toronto Rehabilitation Institute</strong>, where I conducted an items analysis using R of data from a study on traumatic brain injury.
+            During my time at Western, I was an editor of the News and Features sections for the student newspaper, the <i>Western Gazette</i>. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
+            <br><br>
+            My previous work experience is in neuroscience research and mental health. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
+            <br><br>
+            I'd love to connect; please reach out at one of the links below!
             <br><br>
         </p>
         <div class='contact'>
-            <a href="https://github.com/medialtemporal/"><img src="images/github-hover.png" onmouseover="this.src='images/github.png'" onmouseout="this.src='images/github-hover.png'" height='25em' width='25em' /></a>
-            <a href="https://twitter.com/soniarpersaud"><img src="images/twitter-hover.png" onmouseover="this.src='images/twitter.png'" onmouseout="this.src='images/twitter-hover.png'" height='25em' width='25em' /></a>
+            <a href="https://github.com/medialtemporal/"><img src="images/github.png" onmouseover="this.src='images/github-hover.png'" onmouseout="this.src='images/github.png'" height='25em' width='25em' /></a>
+            <a href="https://twitter.com/soniarpersaud"><img src="images/twitter.png" onmouseover="this.src='images/twitter-hover.png'" onmouseout="this.src='images/twitter.png'" height='25em' width='25em' /></a>
             <a class='email' href="mailto:spersa46@uwo.ca" style="text-decoration: none;">spersa46@uwo.ca</a>
 
         </div>
@@ -71,16 +76,19 @@
     <div>
         <h2 class='title' id='skills'>Skills</h2>
         <p>
-            <strong>Python</strong> and data science libraries (pandas, numpy, scipy).<br><br>
+            <strong>Python</strong> and data science libraries (pandas, numpy, seaborn).<br><br>
             <strong>R</strong> and tidyverse packages (dplyr, tidyr, ggplot2).<br><br>
-            <strong>HTML</strong> and <strong>CSS</strong>.
+            I'm also proficient at coding in <strong>MATLAB</strong>, <strong>Java</strong>, <strong>HTML/CSS</strong>, and <strong>JavaScript</strong>.
         </p>
     </div>
 
     <!--Awards & Honours -->
     <div>
-        <h2 class='title' id='awards'>Selected grants and awards</h2>
+        <h2 class='title' id='awards'>Grants and awards</h2>
         <p>
+            <strong>[Shortlist] John H. McDonald Award for Student Journalist of the Year</strong><br><i class='date'>February 2024</i><br>
+            Named as one of three students shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing exemplary work in reporting or editorial capacities.
+            <br><br>
             <strong>John H. McDonald Award for Data Journalism</strong><br><i class='date'>February 2023</i><br>
             Awarded by the Canadian University Press for excellence in student data journalism.
             <br><br>
@@ -88,13 +96,7 @@
             Recipient of a competitive undergraduate research grant to conduct summer research in the lab of Dr. Robin Green at the Toronto Rehabilitation Institute.
             <br><br>
             <strong>UHN Medical Staff Association Volunteer Educational Award</strong><br><i class='date'>June 2020</i><br>
-            Awarded for demonstrating an exceptional commitment to volunteering at the University Health Network, along with high academic performance and extracurricular contributions.
-            <br><br>
-            <strong>The Allan Robertson Scholarship</strong><br><i class='date'>June 2020</i><br>
-            A scholarship awarded for qualities of scholarship, leadership, and unselfish participation in extracurricular activities.
-            <br><br>
-            <strong id='projects'>Western Scholarship of Distinction</strong><br><i class='date'>June 2020</i><br>
-            Awarded for achieving a final high school average of 98%.
+            Scholarship awarded for demonstrating an exceptional commitment to volunteering at the University Health Network, along with high academic performance and extracurricular contributions.
         </p>
     </div>
 
