Optimizing for mobile

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="navbar">
-            <a class="navbar-name" href="#top"><h2>Sonia Persaud</h2></a>
+            <a class="navbar-name" href="#top"><h2 id="top">Sonia Persaud</h2></a>
             <ul class="links">
                 <li>
                     <a class='nav-link' href='index.html'>About</a>
@@ -77,11 +77,11 @@
 
     <div>
         <p><strong>Meep Bot.</strong>  A Discord bot written in Python using the discord.py library to interface with the Discord API. The bot runs customizable timed study sessions for solo users or group study sessions using the Pomodoro technique.
-        View the project page <a href='https://medialtemporal.github.io/MeepBot'>here</a>. </p>
+        View the project page <strong><a href='https://medialtemporal.github.io/MeepBot'>here</a></strong>. </p>
         <p><strong>Poetry Bot.</strong>  A Twitter bot that posts a line of poetry every three hours. Written in Python using the Tweepy library, with Github Actions used to automate posting.
-        View the bot <a href='https://twitter.com/PoetryPostBot'>here</a>, and the source code <a href='https://github.com/medialtemporal/poetry-bot'>here</a>.</p>    
+        View the bot <strong><a href='https://twitter.com/PoetryPostBot'>here</a></strong>, and the source code <strong><a href='https://github.com/medialtemporal/poetry-bot'>here</a></strong>.</p>    
         <p><strong>LHSC Wait Times Tracker.</strong>  A web scraper that tracks the wait times at London Health Sciences Centre's adult emergency departments. Written in Python using the requests and BeautifulSoup libraries. 
-        View the source code <a href='https://github.com/medialtemporal/lhsc-wait-times'>here</a>.</p>
+        View the source code <strong><a href='https://github.com/medialtemporal/lhsc-wait-times'>here</a></strong>.</p>
     </div>
 
 
