Optimizing for mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="navbar">
-            <a class="navbar-name" href="#top"><h2>Sonia Persaud</h2></a>
+            <a class="navbar-name" href="#top"><h2 id="top">Sonia Persaud</h2></a>
             <ul class="links">
                 <li>
                     <a class='nav-link' href='index.html' id="about-on-about">About</a>
@@ -57,9 +57,9 @@
         <p class='description'>
             I'm a recent graduate of Western University, where I completed a Bachelor of Science with an Honours Specialization in Neuroscience.
             <br><br>
-            During my time at Western, I was an editor of the News and Features sections for the student newspaper, the <i>Western Gazette</i>. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
+            During my time at Western, I edited the News and Features sections for the student newspaper, the <i>Western Gazette</i>. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
             <br><br>
-            My previous work experience is in neuroscience research and mental health. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
+            My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
             <br><br>
             I'd love to connect; please reach out at one of the links below!
             <br><br>
